force-app/main/default/objects/CredentialCustomField__c/CredentialCustomField__c.object-meta.xml
<CustomObject>
    <label>Credential Custom Field</label>
    <nameField>
        <displayFormat>CCF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credential Custom Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>