force-app/main/default/objects/CredentialCustomField__c/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <description>Controlling Credential record</description>
    <inlineHelpText>Controlling Credential record</inlineHelpText>
    <label>Credential</label>
    <referenceTo>Credential__c</referenceTo>
    <relationshipLabel>Custom Fields</relationshipLabel>
    <relationshipName>CredentialCustomFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>