force-app/main/default/objects/CredentialCustomField__c/fields/Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Encrypted__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Boolean flag indicating whether encryption should be applied</description>
    <inlineHelpText>Boolean flag indicating whether encryption should be applied</inlineHelpText>
    <label>Encrypted</label>
    <type>Checkbox</type>
</CustomField>