force-app/main/default/objects/CredentialCustomField__c/fields/FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>FieldLabel__c</fullName>
    <description>Custom field label</description>
    <inlineHelpText>Custom field label</inlineHelpText>
    <label>Field Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>