force-app/main/default/objects/CredentialCustomField__c/fields/FieldValue__c.field-meta.xml
<CustomField>
    <fullName>FieldValue__c</fullName>
    <description>Custom field value</description>
    <inlineHelpText>Custom field value</inlineHelpText>
    <label>Field Value</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>